--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -24,7 +24,7 @@ layout: table_wrappers
         <main>
           {% if site.heading_anchors != false %}
             {% include vendor/anchor_headings.html html=content beforeHeading="true" anchorBody="<svg viewBox=\"0 0 16 16\" aria-hidden=\"true\"><use xlink:href=\"#svg-link\"></use></svg>" anchorClass="anchor-heading" anchorAttrs="aria-labelledby=\"%html_id%\"" %}
-            {% include toc.html html=content %}
+            {% include toc.html html=content id="my_toc" %}
           {% else %}
             {{ content }}
           {% endif %}
