--- a/_includes/components/sidebar.html
+++ b/_includes/components/sidebar.html
@@ -25,5 +25,6 @@
   {% if nav_footer_custom != "" %}
     {{ nav_footer_custom }}
   {% else %}
+    <p><a href="#top" id="back-to-top">{{ site.back_to_top_text }}</a></p>
   {% endif %}
 </div>
