--- a/_includes/components/sidebar.html
+++ b/_includes/components/sidebar.html
@@ -25,6 +25,8 @@
   {% if nav_footer_custom != "" %}
     {{ nav_footer_custom }}
   {% else %}
-    <p><a href="#top" id="back-to-top">{{ site.back_to_top_text }}</a></p>
+    <footer class="site-footer">
+      <p><a href="#top" id="back-to-top">{{ site.back_to_top_text }}</a></p>
+    </footer>
   {% endif %}
 </div>
